src/objects/CustomGroups__c.object
<CustomObject>
    <fields>
        <fullName>Branch_ID__c</fullName>
        <label>Branch ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Group ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CustomGroup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CustomGroups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomGroups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>